@@ -10,7 +10,7 @@ list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")
 set(MAJOR_VERSION 3)
 set(MINOR_VERSION 2)
 set(MICRO_VERSION 1)
-set(SDL_REQUIRED_VERSION 3.2.0)
+set(SDL_REQUIRED_VERSION 3.2.5)
 
 project(SDL3_image
     LANGUAGES C
